DATE        AUTHOR      CHANGE
---------- -----------  -------------------------------------------------------
NOTE: Odd numbered minor versions are development series (ex: 0.1, 0.9, etc)

2004-04-14 allenb       Added ability to make distribution as part of build.
                        VERSION: 0.5.3
2004-04-14 allenb       Migrated build system to use AutoDist.
                        VERSION: 0.5.2
2004-04-13 allenb       Refactoring build system to use scons-addons
                        VERSION: 0.5.1
2004-04-12 allenb       Moving into active development version again
                        NEW VERSION: 0.5.0
[Version 0.4.0 released - 4.6.2004]============================================
2004-02-29 allenb       Moved the node type enum into Node as Node::Type. 
                        This breaks all old code that used the type interface.
                        To help avoid future breakage in the future, added
                        an interface to Node to query for node type. (isLeaf(),
                        isNode(), isCData(), isDocument()).
2004-02-25 allenb       Modified build to take into account separate boost
                        include directory.
2004-02-21 allenb       Started adding tests for boost spirit parsing.
                        Added options for boost spirit
                        NEW VERSION: 0.3.1
2004-02-20 allenb       Added more extensive tests to test suite.  Added metric
                        tests for loading and parsing documents.
2004-02-14 allenb       Restructure the test suite.  Added StaticOnly option
                        to build.  Added Metric Registry to test suite.

[Version 0.3.0 released - 1.28.2004]===========================================
2004-01-28 patrickh     Restored the ability to compile shared libraries.
2003-10-07 allenb       Added support for "stringification" of attrib text and
                        cdata text.  This makes the system automatically